--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -205,3 +205,14 @@ aside {
   padding: 10px 0;
   letter-spacing: 1px;
 }
+
+
+
+.wrapper-title h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  height: 100vh;
+}
+
